--- a/public/404.html
+++ b/public/404.html
@@ -180,7 +180,7 @@
 </head>
 <body>
 <div class="container404">
-    <div class="stage" onclick="window.location.href='https://olbreeze.github.io/appStarWars/contact';">
+    <div class="stage" onclick="window.location.href='https://olbreeze.github.io/MyProfile/';">
         <div class="layer"></div>
         <div class="layer"></div>
         <div class="layer"></div>
