--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    
     <title>My 404</title>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&text=Pure:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:700&text=css&display=swap" rel="stylesheet">
@@ -206,6 +206,7 @@
         window.setTimeout = null;
         sessionStorage.redirect = location.href;
     </script>
+    <meta charset="UTF-8" http-equiv="refresh" content="0;URL='/'">
 </div>
 </body>
 </html>
