--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
         window.setTimeout = null;
         sessionStorage.redirect = location.href;
     </script>
-    <meta http-equiv="refresh" content="3;URL='/'">
+    <meta http-equiv="refresh" content="3;URL='/MyProfile/'">
     <style>
         .container404 {
             height: 90vh;
