--- a/index.html
+++ b/index.html
@@ -1,21 +1,1 @@
-<!doctype html><html lang="en">
-  <head><meta charset="utf-8"/><link rel="icon" href="/MyProfile/favicon.png"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <meta name="theme-color" content="#000000"/>
-  <title>GO->l</title>
-  <script defer="defer" src="/MyProfile/static/js/main.3571511c.js">
-
-  </script><link href="/MyProfile/static/css/main.761b67a8.css" rel="stylesheet">
-    <script>
-      (function(){
-        var redirect = sessionStorage.redirect;
-        delete sessionStorage.redirect;
-        if (redirect && redirect != location.href) {
-          history.replaceState(null, null, redirect);
-        }
-      })();
-    </script>
-</head>
-  <body><div id="root"></div>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/MyProfile/favicon.png"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><title>GO->l</title><script>!function(){var e=sessionStorage.redirect;delete sessionStorage.redirect,e&&e!=location.href&&history.replaceState(null,null,e)}()</script><script defer="defer" src="/MyProfile/static/js/main.78c22809.js"></script><link href="/MyProfile/static/css/main.054af2a1.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
