--- a/404.html
+++ b/404.html
@@ -11,6 +11,15 @@
         sessionStorage.redirect = location.href;
     </script>
     <meta http-equiv="refresh" content="3;URL='/MyProfile/'">
+    <style>
+        body {
+            background: #1b2949;
+            color: white;
+            font-family: Arial;
+            text-align: center;
+            padding-top: 40vh;
+        }
+    </style>
 </head>
 <body>
         <h1>404 - Redirecting...</h1>
