--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Welcome 404</title>
+    <title>Welcome</title>
 <!--    <link href="https://fonts.googleapis.com/css2?family=Pacifico&text=Pure:wght@400;700&display=swap" rel="stylesheet">-->
 <!--    <link href="https://fonts.googleapis.com/css2?family=Roboto:700&text=css&display=swap" rel="stylesheet">-->
 <!--    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&text=!&display=swap" rel="stylesheet">-->
@@ -22,6 +22,6 @@
     </style>
 </head>
 <body>
-        <h1>404 - Redirecting...</h1>
+        <h1>Redirecting...</h1>
 </body>
 </html>
